# a-rusty-kalshi-bot

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  fca112.yaml  railway.toml
dashboard/: package-lock.json  package.json  vite.config.ts
dashboard/src/: App.tsx  index.css
dashboard/src/components/: Header.tsx  MarketState.tsx  ModelCard.tsx  ModelGrid.tsx  PnLChart.tsx  RiskPanel.tsx  TradesFeed.tsx
dashboard/src/hooks/: useWebSocket.ts
dashboard/src/types/: index.ts
migrations/: 001_init.sql
src/: config.rs  db.rs  errors.rs  main.rs  state.rs
src/execution/: ev.rs
src/feeds/: crypto_api.rs  mod.rs
src/kalshi/: auth.rs  client.rs  mod.rs  scanner.rs  types.rs
src/models/: black_scholes.rs  calibration.rs  jump_diffusion.rs  mod.rs  student_t.rs  volatility.rs
src/paper/: mod.rs  simulator.rs  tracker.rs
src/risk/: kelly.rs  limits.rs  mod.rs
src/server/: routes.rs  ws.rs
